--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div id="background" style="text-align: center;">
+<div id="background" style="text-align: center;"> 
     <div class="container">
           <div class="search">
             <br>
@@ -17,7 +17,7 @@
             </div>
             </div> 
         </div>
-            <button type="button" mat-raised-button color="primary" (click)="searchStart()">Online</button>
+            <button type="button" mat-raised-button color="primary" (click)="searchStart()">Online Store</button>
                
         
         <br>
