--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">LandSpeed Records</a>
+    <a class="navbar-brand" href="#">
+      <img src="assets/canberraPics/record7.jpg" width="30" height="24" class="d-inline-block align-text-top">
+      LandSpeed Records</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,9 +10,6 @@
           <li class="nav-item active" routerLinkActive="active">
             <a class="nav-link" routerLink="/app/shop-page">Online store</a>
           </li>
-          <!-- <li class="nav-item active" routerLinkActive="active">
-            <a class="nav-link" routerLink="">Form Template</a>
-          </li> -->
         </ul>
       </div>
 </nav>
