--- a/src/app/shop-page/shop-page.component.html
+++ b/src/app/shop-page/shop-page.component.html
@@ -1,18 +1,16 @@
 
-
 <!--Main layout-->
 <main>
   <div class="container">
-
+      <br>
+      <br>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <!-- Navbar brand -->
-      <span class="navbar-brand">Categories:</span>
+      <div class="navbar-brand">Online store:</div>
 
       <!-- Collapse button -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
-        aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -23,33 +21,26 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">All
-              <span class="sr-only">(current)</span>
+              <span class="sr-only">Business cards</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Shirts</a>
+            <a class="nav-link" href="#">Tote bags</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sport wears</a>
+            <a class="nav-link" href="#">Stickers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Outwears</a>
+            <a class="nav-link" href="#">Logo</a>
           </li>
 
         </ul>
-        <!-- Links -->
-
-        <form class="form-inline">
-          <div class="md-form my-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          </div>
-        </form>
       </div>
       <!-- Collapsible content -->
 
     </nav>
     <!--/.Navbar-->
-
+<br>
     <!--Section: Products v.3-->
     <section class="text-center mb-4">
 
@@ -64,7 +55,7 @@
 
             <!--Card image-->
             <div class="view overlay"> 
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record1.jpg" class="card-img-top" >
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -75,18 +66,18 @@
             <div class="card-body text-center">
               <!--Category & Title-->
               <div href="" class="text-secondary">
-                <h2>Shirt</h2>
+                <h2>Stickers</h2>
               </div>
-              <h3>
+              <h2>
                 <strong>
-                  <div class="dark-grey-text">Denim shirt
+                  <div class="dark-grey-text"> Dynamic Stickers
                     <span class="badge badge-pill danger-color">NEW</span>
                   </div>
                 </strong>
-              </h3>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>120$</strong>
+                <strong>$5</strong>
               </h4>
 
             </div>
@@ -106,7 +97,7 @@
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/13.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record2.jpg" class="card-img-top" >
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -116,17 +107,16 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h5>Sport wear</h5>
-              </a>
-              <h5>
+              
+                <h2>New Logo (Poster)</h2>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Sweatshirt</a>
+                  <div href="" class="dark-grey-text">New Logo</div>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>139$</strong>
+                <strong>$39</strong>
               </h4>
 
             </div>
@@ -142,11 +132,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/14.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record3.jpg" class="card-img-top" >
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -156,19 +146,18 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h5>Sport wear</h5>
-              </a>
-              <h5>
+              <div href="" class="grey-text">
+                <h2>Business cards</h2>
+              </div>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Grey blouse
-                    <span class="badge badge-pill primary-color">bestseller</span>
-                  </a>
+                  <div href="" class="dark-grey-text">Business cards
+                  </div>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>99$</strong>
+                <strong>Free</strong>
               </h4>
 
             </div>
@@ -184,11 +173,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record4.jpg" class="card-img-top" >
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -198,15 +187,15 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-                <h5>Outwear</h5>
-              <h5>
+                <h2>Tote Bags</h2>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Black jacket</a>
+                  <a href="" class="dark-grey-text">Very Fetch tote bags</a>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>219$</strong>
+                <strong>$25</strong>
               </h4>
 
             </div>
@@ -228,11 +217,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/13.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record5.jpg" class="card-img-top" >
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -242,19 +231,19 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h2>Shirt</h2>
-              </a>
+              <div href="" class="grey-text">
+                <h2>Stand Alone Logo</h2>
+              </div>
               <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Denim shirt
+                  <a href="" class="dark-grey-text">A very "fetch"
                     <span class="badge badge-pill danger-color">NEW</span>
                   </a>
                 </strong>
               </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>120$</strong>
+                <strong>$20</strong>
               </h4>
 
             </div>
@@ -270,11 +259,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/14.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record6.jpg" class="card-img-top">
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -284,17 +273,17 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h5>Sport wear</h5>
-              </a>
-              <h5>
+              <div href="" class="grey-text">
+                <h2>Poster</h2>
+              </div>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Sweatshirt</a>
+                  <a href="" class="dark-grey-text">Poster NEW</a>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>139$</strong>
+                <strong>$80</strong>
               </h4>
 
             </div>
@@ -310,11 +299,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record8.jpg" class="card-img-top">
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -324,19 +313,20 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h5>Sport wear</h5>
-              </a>
-              <h5>
+              <div href="" class="grey-text">
+                <h2>Poster (Stand Alone)</h2>
+              </div>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Grey blouse
-                    <span class="badge badge-pill primary-color">bestseller</span>
-                  </a>
+                  <div href="" class="dark-grey-text">Poster  
+                    <br> 
+                    BESTSELLER
+                  </div>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>99$</strong>
+                <strong>$99</strong>
               </h4>
 
             </div>
@@ -352,11 +342,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card" class="mat-elevation-z8">
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" alt="">
+              <img src="/assets/canberraPics/record7.jpg" class="card-img-top">
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -366,17 +356,17 @@
             <!--Card content-->
             <div class="card-body text-center">
               <!--Category & Title-->
-              <a href="" class="grey-text">
-                <h5>Outwear</h5>
-              </a>
-              <h5>
+              <div href="" class="grey-text">
+                <h2>Logo</h2>
+              </div>
+              <h2>
                 <strong>
-                  <a href="" class="dark-grey-text">Black jacket</a>
+                  <a href="" class="dark-grey-text">Redesigned Logo</a>
                 </strong>
-              </h5>
+              </h2>
 
               <h4 class="font-weight-bold blue-text">
-                <strong>219$</strong>
+                <strong>$30</strong>
               </h4>
 
             </div>
@@ -394,46 +384,7 @@
     </section>
     <!--Section: Products v.3-->
 
-    <!--Pagination-->
-    <nav class="d-flex justify-content-center wow fadeIn">
-      <ul class="pagination pg-blue">
-
-        <!--Arrow left-->
-        <li class="page-item disabled">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </li>
-
-        <li class="page-item active">
-          <a class="page-link" href="#">1
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">4</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">5</a>
-        </li>
-
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <!--Pagination-->
-
+    
   </div>
 </main>
 <!--Main layout-->
@@ -441,51 +392,10 @@
 <!--Footer-->
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
-  
-  <!--/.Call to action-->
-
-  <hr class="my-4">
-
-  <!-- Social icons -->
-  <div class="pb-4">
-    <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-      <i class="fab fa-facebook-f mr-3"></i>
-    </a>
-
-    <a href="https://twitter.com/MDBootstrap" target="_blank">
-      <i class="fab fa-twitter mr-3"></i>
-    </a>
-
-    <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-      <i class="fab fa-youtube mr-3"></i>
-    </a>
-
-    <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-      <i class="fab fa-google-plus-g mr-3"></i>
-    </a>
-
-    <a href="https://dribbble.com/mdbootstrap" target="_blank">
-      <i class="fab fa-dribbble mr-3"></i>
-    </a>
-
-    <a href="https://pinterest.com/mdbootstrap" target="_blank">
-      <i class="fab fa-pinterest mr-3"></i>
-    </a>
-
-    <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
-      <i class="fab fa-github mr-3"></i>
-    </a>
-
-    <a href="http://codepen.io/mdbootstrap/" target="_blank">
-      <i class="fab fa-codepen mr-3"></i>
-    </a>
-  </div>
-  <!-- Social icons -->
-
   <!--Copyright-->
   <div class="footer-copyright py-3">
     © Ab immemorabili Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> LandSpeed Records </a>
+    <a href="#" target="_blank"> LandSpeed Records </a>
   </div>
   <!--/.Copyright-->
 
